force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Actual_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin__c</fullName>
    <formula>1-(  List_Cost__c / SBQQ__NetPrice__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>