force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Actual_Product_Profit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Product_Profit__c</fullName>
    <formula>SBQQ__Quantity__c * ( SBQQ__NetPrice__c -  List_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Product Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>