force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Charge__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charge__c</fullName>
    <formula>SBQQ__Quote__r.Delivery_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>