force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Expected_Margin__c.field-meta.xml
<CustomField>
    <fullName>Expected_Margin__c</fullName>
    <formula>1 - ( Substituted_Product_Cost__c / Substituted_Product_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Margin</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>