force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Expected_Product_Profit__c.field-meta.xml
<CustomField>
    <fullName>Expected_Product_Profit__c</fullName>
    <formula>SBQQ__Quantity__c *(Substituted_Product_Price__c -  Substituted_Product_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Product Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>