force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Margin__c.field-meta.xml
<CustomField>
    <fullName>Line_Margin__c</fullName>
    <formula>IF( OR( TEXT(Feature__c) = null, TEXT(Feature__c) = &#39;&#39;, TEXT(Feature__c) = &#39;Parts&#39; ) ,

IF( OR( SBQQ__NetPrice__c = 0, SBQQ__NetPrice__c = null) , 0, (SBQQ__NetPrice__c - List_Cost__c ) / SBQQ__NetPrice__c )

, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>