force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Price__c</fullName>
    <formula>Net_Unit_Price__c *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>