force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Source__c.field-meta.xml
<CustomField>
    <fullName>Price_Source__c</fullName>
    <label>Price Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KAP</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>