force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Recommended_Service_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Service_List_Price__c</fullName>
    <formula>Delivery_Charge__c / SBQQ__Quote__r.Number_of_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended Service List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>