force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Sub_Difference_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sub_Difference_Amount__c</fullName>
    <formula>SBQQ__ListPrice__c -  Substituted_Product_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Difference Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>