force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Sub_Difference_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Difference_Percentage__c</fullName>
    <formula>(SBQQ__ListPrice__c - Substituted_Product_Price__c) /SBQQ__ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Difference Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>