force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Substituted_Product__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Substituted Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Lines (Substituted Product)</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>