force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Substituted_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Product_Price__c</fullName>
    <label>Substituted Product Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>