force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Substitution_Reason__c.field-meta.xml
<CustomField>
    <fullName>Substitution_Reason__c</fullName>
    <label>Substitution Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Not Available/On Order</fullName>
            </value>
            <value>
                <fullName>Insufficient Quantity Available</fullName>
            </value>
            <value>
                <fullName>Availability Date too late for customer</fullName>
            </value>
            <value>
                <fullName>Companion Item not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>