force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Target_Customer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Customer_Amount__c</fullName>
    <label>Target Customer Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>