force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>(List_Price__c -   (SBQQ__AdditionalDiscount__c /  SBQQ__Quantity__c )   ) * Tax_Rate__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>